# restful-apis-example

./: .gitignore  README.adoc  bootstrap.sh  pyproject.toml
src/: db.sqlite  main.py  main_starting.py
src/entities/: Equipment.py  database_conn.py
