[tool.poetry]
name = "restful-apis"
version = "0.1.0"
description = "Playing around with poetry and RESTful APIs"
authors = ["Javier Fernández <jfernandez@joifilabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
